# Codex-Telegram-Plugin

./: .env.sample  .gitignore  .mcp.json  CODEX_APP_PLUGIN_INSTALL_STEPS.md  INSTALL_MACOS_CODEX_PLUGIN.md  README.md  ccgram_feature_parity_plan.md  cli_installation_feature_plan.md  codex_telegram_gateway_plan.md  notes.md  pyproject.toml  reset-telegram-topics.sh  task_plan.md
.codex-plugin/: plugin.json
install/: home-marketplace.sample.json  install.sh
skills/telegram/: SKILL.md
src/codex_telegram_gateway/: __init__.py  app_store.py  artifact_detector.py  cli.py  codex_api.py  commands_catalog.py  config.py  daemon.py  daemon_manager.py  history_command.py  inline_query.py  install_config.py  interactive_bridge.py  launchd_service.py  live_view.py  mailbox_commands.py  mcp_server.py  media_ingest.py  models.py  notification_modes.py  operator_status.py  panes_compat.py  plugin_installation.py  ports.py  recall_command.py  recovery.py  remote_actions.py  response_builder.py  resume_command.py  runtime_paths.py  screenshot_capture.py  self_update.py  send_callbacks.py  send_command.py  send_security.py  service.py  sessions_dashboard.py  shell_mode.py  state.py  status_bubble.py  (+7 more)
src/codex_telegram_gateway.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: conftest.py
tests/e2e/: test_daemon_cli_flow.py  test_gateway_flow.py  test_history_flow.py  test_install_config_flow.py  test_install_script.py  test_launchd_service_cli.py  test_plugin_install_flow.py  test_resume_flow.py  test_status_cli.py  test_update_cli.py
(+45 files in other folders)
